Fix: gap in spacing navbar title, and moved old assets to a new folder

--- a/src/component/nav_bar/nav_bar.css
+++ b/src/component/nav_bar/nav_bar.css
@@ -39,6 +39,12 @@
   color: var(--mint-cream);
 }
 
+@media screen and (max-width: 480px) {
+  .nav-title-clickable a {
+    margin-left: 1px;
+  }
+}
+
 .screen-right {
   display: flex;
   align-items: center
